--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ HOST=0.0.0.0
 PORT=4000
 API_URL=http://localhost:3000
 API_SSR_URL=http://localhost:3000
-WS_URL=https://social-core-2021.herokuapp.com
+WS_URL=http://localhost:3000
