update env for heroku

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ PROTOTYPE=http
 DOMAIN=localhost
 HOST=0.0.0.0
 PORT=4000
-API_URL=http://localhost:3000
-API_SSR_URL=http://localhost:3000
-WS_URL=http://localhost:3000
+API_URL=https://social-core-2021.herokuapp.com
+API_SSR_URL=https://social-core-2021.herokuapp.com
+WS_URL=https://social-core-2021.herokuapp.com
