--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "nuxt": "^2.15.4",
         "nuxt-healthcheck": "^1.0.1",
         "nuxt-validate": "^1.0.1",
+        "peerjs": "^1.3.2",
         "socket.io-client": "^4.0.1",
         "swiper": "^5.4.5",
         "vue-carousel": "^0.18.0",
