--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,6 @@ PORT=4000
 API_URL=http://localhost:3000
 API_SSR_URL=http://localhost:3000
 WS_URL=http://localhost:5000
+PEER_URL=
 AGOLIA_APP=
 AGOLIA_API_KEY=
